--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>goit-js-hw-01</title>
   </head>
   <body>
-    <script src="./js/task-1.js" type="modul"></script>
-    <script src="./js/task-2.js" type="modul"></script>
-    <script src="./js/task-3.js" type="modul"></script>
+    <script src="./js/task-1.js" type="module"></script>
+    <script src="./js/task-2.js" type="module"></script>
+    <script src="./js/task-3.js" type="module"></script>
   </body>
 </html>
